# oatty

./: .editorconfig  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Makefile  QUICKSTART.md  README.md  RELEASE.md  SECURITY.md  exchange.txt  package.json  parsed_ratatui_v030.txt  ratatui_v030.html  repl.js  rust-toolchain.toml  rustc-ice-2025-10-06T03_33_38-84517.txt  rustfmt.toml
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/agent/src/search/: indexer.rs  mod.rs  synonyms.json
crates/api/: Cargo.toml  README.md
crates/api/src/: lib.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/engine/: Cargo.toml  README.md
crates/engine/src/: field_paths.rs  lib.rs  model.rs  resolve.rs  templates.rs
crates/engine/src/executor/: execute_plan.rs  mod.rs  planning.rs  prepare.rs  repeat.rs  runner.rs  step_once.rs  types.rs
crates/engine/src/provider/: contract.rs  contract_store.rs  fetch.rs  identifier.rs  mod.rs  null.rs  registry.rs  selection.rs  suggestion_builder.rs  value_provider.rs
crates/engine/src/workflow/: bindings.rs  condition_syntax.rs  document.rs  mod.rs  runner.rs  runtime.rs  state.rs
crates/engine/workflows/: app_with_db.yaml  build_from_tarball.yaml  collaborator_lifecycle.yaml  pipeline_bootstrap.yaml  space_with_otel.yaml
crates/mcp/: Cargo.toml  README.md  build.rs
crates/mcp/examples/: stdio_client.rs
crates/mcp/src/: lib.rs
crates/mcp/src/client/: client.rs  core.rs  gateway.rs  health.rs  http.rs  manager.rs  mod.rs  stdio.rs  ultrafast.rs
crates/mcp/src/client/http/: mod.rs  sse.rs
crates/mcp/src/config/: interpolation.rs  io.rs  mod.rs  model.rs  validation.rs
crates/mcp/src/logging/: audit.rs  formatter.rs  manager.rs  mod.rs  ring_buffer.rs
crates/mcp/src/plugin/: engine.rs  lifecycle.rs  mod.rs  registry.rs
crates/mcp/src/provider/: adapter.rs  mcp_provider.rs  mod.rs  registry.rs
crates/mcp/src/server/: catalog.rs  core.rs  http.rs  log_payload.rs  mod.rs  schemas.rs
crates/mcp/src/server/search/: indexer.rs  mod.rs  synonyms.json
crates/mcp/src/server/workflow/: errors.rs  mod.rs  prompts.rs  resources.rs
crates/mcp/src/server/workflow/services/: history.rs  mod.rs  storage.rs  sync.rs
crates/mcp/src/server/workflow/tools/: common.rs  execution.rs  history.rs  inputs.rs  manifest.rs  mod.rs  orchestration.rs  types.rs
crates/mcp/src/types/: errors.rs  mod.rs  plugin.rs  status.rs  tools.rs
crates/registry/: Cargo.toml  README.md  build.rs
crates/registry-gen/: Cargo.toml  README.md
crates/registry-gen/src/: io.rs  lib.rs  main.rs  openapi.rs  provider_resolver.rs  schema.rs  workflow.rs
crates/registry-gen/src/tests/: flag_tests.rs  openapi_v3_smoke.rs  provider_resolver.rs  schema_tests.rs  type_tests.rs
crates/registry/src/: catalog_patch.rs  catalog_persistence.rs  clap_builder.rs  config.rs  feat_gate.rs  lib.rs  models.rs  openapi_import.rs  search.rs  utils.rs  workflows.rs
crates/registry/tests/: derive_tests.rs
crates/registry/tests/data/: schema_fixture.json
crates/tui/: Cargo.toml  README.md  build.rs
crates/tui/src/: app.rs  cmd.rs  component.rs  lib.rs  log_persistence.rs  palette.rs  palette_comp.rs  preview.rs  tables.rs  theme.rs  ui.rs
crates/tui/src/ui/: builder.rs  focus.rs  layout.rs  main.rs  main_component.rs  mod.rs  modals.rs  runtime.rs  utils.rs
crates/tui/src/ui/components/: builder.rs  component.rs  help.rs  hint_bar.rs  logs.rs  mod.rs  palette.rs  steps.rs  table.rs
crates/tui/src/ui/components/browser/: browser.rs  browser_component.rs  layout.rs  mod.rs  state.rs
crates/tui/src/ui/components/builder/: builder.rs  layout.rs  mod.rs  state.rs
crates/tui/src/ui/components/common/: json_syntax.rs  mod.rs  results_table.rs  results_table_view.rs  scroll_metrics.rs  scrollbar.rs  table_input_actions.rs  text_input.rs
crates/tui/src/ui/components/common/confirmation_modal/: confirmation_modal_component.rs  mod.rs  (+1 more)
crates/tui/src/ui/components/help/: content.rs  help.rs  help_component.rs  mod.rs  state.rs
crates/tui/src/ui/components/logs/: hint_bar.rs  logs.rs  logs_component.rs  mod.rs  state.rs
crates/tui/src/ui/components/mcp_server/: mcp_server_component.rs  mod.rs  state.rs
crates/tui/src/ui/components/nav_bar/: mod.rs  nav_bar.rs  nav_bar_component.rs  state.rs
crates/tui/src/ui/components/pagination/: mod.rs  pagination.rs  pagination_component.rs  state.rs
crates/tui/src/ui/components/palette/: hint_bar.rs  mod.rs  palette.rs  palette_component.rs  state.rs  suggest.rs  suggestion_engine.rs
crates/tui/src/ui/components/plugins/: add.rs  details.rs  details_component.rs  details_state.rs  env.rs  hints_bar.rs  logs.rs  mod.rs  plugins.rs  plugins_component.rs  search.rs  search_component.rs  secrets.rs  state.rs  table.rs  types.rs
crates/tui/src/ui/components/results/: results_table_component.rs  state.rs
crates/tui/src/ui/components/table/: footer.rs  mod.rs  plugin_component.rs  results_table_component.rs  select.rs  state.rs  table.rs
crates/tui/src/ui/components/theme_picker/: mod.rs  state.rs  theme_picker_component.rs
crates/tui/src/ui/components/workflows/: collector.rs  component.rs  field_picker.rs  input.rs  mod.rs  state.rs  view_utils.rs  workflows.rs  workflows_component.rs
crates/tui/src/ui/theme/: ansi256.rs  catalog.rs  cyberpunk.rs  dracula.rs  helpers.rs  loader.rs  mod.rs  nord.rs  roles.rs  theme_helpers.rs
crates/tui/src/ui/widgets/: hints.rs  logs.rs  mod.rs  preview.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  workflow.rs
crates/types/src/workflow/: validation.rs
crates/util/: Cargo.toml  README.md  build.rs
crates/util/src/: async_runtime.rs  command_vec_utils.rs  date_handling.rs  history_store.rs  http.rs  http_exec.rs  http_path_resolution.rs  lib.rs  openapi_validation.rs  path_processing.rs  preferences.rs  schema.rs  shell_lexing.rs  text_processing.rs
crates/util/src/http/: http_exec.rs  http_path_resolution.rs  mod.rs  parser.rs
crates/util/src/keystore/: interpolation.rs  mod.rs
(+216 files in other folders)
