[workspace]
members = [
    "crates/cli",
    "crates/tui",
    "crates/registry",
    "crates/registry-gen",
    "crates/engine",
    "crates/api",
    "crates/util",
    "crates/types",
    "crates/mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
authors = ["Heroku CLI Team <devnull@example.com>"]
repository = "https://example.com/heroku"

[workspace.dependencies]
anyhow = "1"
bincode = { version = "2", features = ["serde", "derive"] }
thiserror = "2.0.16"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9.34"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "process", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ratatui = "0.29.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
regex = "1.11.2"
url = "2.5.7"
percent-encoding = "2"
once_cell = "1"
bytes = "1"
base64 = "0.22.1"
glob = "0.3"
walkdir = "2"
serde_with = "3"
time = { version = "0.3", features = ["serde-human-readable"] }
http = "1"
hyper = { version = "1", features = ["http1", "http2", "client"] }
dirs-next = "2"
heck = "0.5.0"
rat-focus = "1.0.2"
chrono = { version = "0.4.42", features = ["serde"] }
arboard = "3"
futures-util = "0.3"
keyring = "3.6.3"
ring_buffer = "2.0.2"
uuid = "1.18.1"
async-trait = "0.1.89"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "gzip", "brotli", "deflate", "rustls-tls", "stream"] }