[workspace]
members = [
    "crates/cli",
    "crates/tui",
    "crates/registry",
    "crates/registry-gen",
    "crates/engine",
    "crates/api",
    "crates/util",
    "crates/types",
    "crates/mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
authors = ["Heroku CLI Team <devnull@example.com>"]
repository = "https://example.com/heroku"

[workspace.dependencies]
anyhow = "1.0.100"
bincode = { version = "2.0.1", features = ["serde", "derive"] }
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
clap = { version = "4.5.48", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "signal", "process", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
regex = "1.11.3"
url = "2.5.7"
percent-encoding = "2.3.2"
once_cell = "1.21.3"
dirs-next = "2.0.0"
heck = "0.5.0"
rat-focus = "1.2.0"
chrono = { version = "0.4.42", features = ["serde"] }
arboard = "3.6.1"
futures-util = "0.3.31"
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native", "linux-native"] }
async-trait = "0.1.89"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "cookies", "gzip", "brotli", "deflate", "rustls-tls", "stream"] }
textwrap = { version = "0.16.2" }
indexmap = { version = "2.6.0", features = ["serde"] }
unicode-width = "0.2.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
