[workspace]
members = [
  "crates/cli",
  "crates/tui",
  "crates/registry",
  "crates/registry-gen",
  "crates/engine",
  "crates/api",
  "crates/util",
  "crates/types",
  "crates/mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
authors = ["Oatty CLI Team <devnull@example.com>"]
repository = "https://example.com/oatty"

[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
clap = { version = "4.5.56", features = ["derive"] }
tokio = { version = "1.49.0", features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "process",
  "fs",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
regex = "1.12.2"
url = "2.5.8"
percent-encoding = "2.3.2"
once_cell = "1.21.3"
dirs-next = "2.0.0"
heck = "0.5.0"
rat-focus = "2.0.2"
chrono = { version = "0.4.43", features = ["serde"] }
arboard = "3.6.1"
futures-util = "0.3.31"
keyring = { version = "3.6.3", default-features = false, features = [
  "apple-native",
  "windows-native",
  "linux-native",
] }
async-trait = "0.1.89"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "cookies", "gzip", "brotli", "deflate", "rustls-tls", "stream"] }
textwrap = { version = "0.16.2" }
indexmap = { version = "2.13.0", features = ["serde"] }
unicode-width = "0.2.2"
postcard = { version = "1.1.3", features = ["use-std"] }
seekstorm = "2.2.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
