[package]
name = "oatty-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
oatty-registry = {path = "../registry"}
oatty-mcp = {path = "../mcp"}
oatty-util = {path = "../util"}
anyhow = {workspace = true}
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
dirs-next = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
seekstorm = "1.2.5"
thiserror = { workspace = true }