[package]
name = "heroku-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Heroku API client library"
license = "MIT OR Apache-2.0"
authors = ["Heroku CLI Team <devnull@example.com>"]
repository = "https://example.com/heroku"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
dirs-next = { workspace = true }
heroku-types = { path = "../types" }