[package]
name = "oatty-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Oatty API client library"
license = "MIT OR Apache-2.0"
authors = ["Oatty CLI Team <devnull@example.com>"]
repository = "https://example.com/oatty"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
dirs-next = { workspace = true }
oatty-types = { path = "../types" }