[package]
name = "oatty-api"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
oatty-types = { path = "../types" }
indexmap.workspace = true