[package]
name = "heroku-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Heroku CLI application"
license = "MIT OR Apache-2.0"
authors = ["Heroku CLI Team <devnull@example.com>"]
repository = "https://example.com/heroku"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
heroku-api = { path = "../api" }
heroku-registry = { path = "../registry" }
heroku-engine = { path = "../engine" }
heroku-tui = { path = "../tui" }
heroku-util = { path = "../util" }
heroku-mcp = { path = "../mcp" }
heroku-types = { path = "../types" }
reqwest = { workspace = true }
