[package]
name = "oatty"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "OpenAPI TTY CLI"
license = "MIT OR Apache-2.0"
authors = ["Justin Wilaby <jwilaby@gmail.com>"]
repository = "https://example.com/oatty"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
oatty-agent = { path = "../agent" }
oatty-api = { path = "../api" }
oatty-registry = { path = "../registry" }
oatty-engine = { path = "../engine" }
oatty-tui = { path = "../tui" }
oatty-util = { path = "../util" }
oatty-mcp = { path = "../mcp" }
oatty-types = { path = "../types" }
reqwest = { workspace = true }

[[bin]]
name = "oatty"
path = "src/main.rs"
