[package]
name = "oatty"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
oatty-api = { path = "../api" }
oatty-registry = { path = "../registry" }
oatty-engine = { path = "../engine" }
oatty-tui = { path = "../tui" }
oatty-util = { path = "../util" }
oatty-mcp = { path = "../mcp" }
oatty-types = { path = "../types" }
reqwest = { workspace = true }
indexmap.workspace = true

[[bin]]
name = "oatty"
path = "src/main.rs"
