[package]
name = "heroku-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Heroku workflow execution engine"
license = "MIT OR Apache-2.0"
authors = ["Heroku CLI Team <devnull@example.com>"]
repository = "https://example.com/heroku"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
heroku-api = { path = "../api" }
heroku-util = { path = "../util" }
heroku-registry = { path = "../registry" }
heroku-types = {path = "../types"}
heroku-mcp = { path = "../mcp" }
tokio = { workspace = true }
reqwest = { workspace = true }
percent-encoding = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
