[package]
name = "oatty-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Oatty workflow execution engine"
license = "MIT OR Apache-2.0"
authors = ["Oatty CLI Team <devnull@example.com>"]
repository = "https://example.com/heroku"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
oatty-api = { path = "../api" }
oatty-util = { path = "../util" }
oatty-registry = { path = "../registry" }
oatty-types = { path = "../types" }
tokio = { workspace = true }
reqwest = { workspace = true }
indexmap = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.23.0"
