[package]
name = "oatty-engine"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
oatty-api = { path = "../api" }
oatty-util = { path = "../util" }
oatty-registry = { path = "../registry" }
oatty-types = { path = "../types" }
tokio = { workspace = true }
reqwest = { workspace = true }
indexmap = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.24.0"
