[package]
name = "oatty-mcp"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = "Model Context Protocol (MCP) plugin infrastructure for Oatty CLI"

[dependencies]
keyring = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
dirs-next = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }
oatty-util = { path = "../util" }
oatty-types = { path = "../types" }
oatty-registry = { path = "../registry" }
rmcp = { version = "0.12.0", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "auth"] }
indexmap.workspace = true
[features]
default = []

[dev-dependencies]
temp-env = "0.3"
tempfile = "3.24.0"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2" }
