[package]
name = "oatty-mcp"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = "Model Context Protocol (MCP) plugin infrastructure for Oatty CLI"

[dependencies]
keyring = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs-next = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
once_cell = { workspace = true }
oatty-util = { path = "../util" }
oatty-types = { path = "../types" }
oatty-registry = { path = "../registry" }
oatty-registry-gen = { path = "../registry-gen" }
oatty-engine = { path = "../engine" }
axum = "0.8.8"
tokio-util = "0.7.18"
serde_yaml = { workspace = true }
rmcp = { version = "0.16.0", features = [
    "server-side-http",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "reqwest",
    "auth",
] }
indexmap.workspace = true
schemars = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
oatty-types = { path = "../types" }
schemars = { workspace = true }
serde_json = { workspace = true }

[features]
default = []

[dev-dependencies]
temp-env = "0.3.6"
tempfile = "3.25.0"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2" }
