[package]
name = "oatty-registry-gen"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Oatty registry code generation utilities"
license = "MIT OR Apache-2.0"
authors = ["Oatty CLI Team <devnull@example.com>"]
repository = "https://example.com/oatty"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
heck = { workspace = true }
oatty-types = { path = "../types" }
oatty-util = { path = "../util" }
indexmap = { workspace = true }
postcard = { workspace = true }
url = { workspace = true }