[package]
name = "oatty-registry-gen"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
heck = { workspace = true }
oatty-types = { path = "../types" }
oatty-util = { path = "../util" }
indexmap = { workspace = true }
postcard = { workspace = true }
url = { workspace = true }