[package]
name = "oatty-registry"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Oatty command registry and schema management"
license = "MIT OR Apache-2.0"
authors = ["Oatty CLI Team <devnull@example.com>"]
repository = "https://example.com/oatty"

[dependencies]
anyhow = { workspace = true }
dirs-next = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
oatty-types = { path = "../types" }
oatty-util = {path = "../util"}
heck = { workspace = true }
postcard = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
oatty-registry-gen = { path = "../registry-gen" }
oatty-types = { path = "../types" }
