[package]
name = "oatty-registry"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
dirs-next = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
oatty-types = { path = "../types" }
oatty-util = {path = "../util"}
heck = { workspace = true }
postcard = { workspace = true }
seekstorm = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
oatty-types = { path = "../types" }
