[package]
name = "heroku-tui"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Heroku CLI terminal user interface"
license = "MIT OR Apache-2.0"
authors = ["Heroku CLI Team <devnull@example.com>"]
repository = "https://example.com/heroku"

[dependencies]
anyhow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
notify = "8.2.0"
heroku-registry = { path = "../registry" }
heroku-util = { path = "../util" }
heroku-types = { path = "../types" }
heroku-mcp = { path = "../mcp" }
heroku-engine = { path = "../engine" }
heroku-api = { path = "../api" }
arboard = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
heck = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
rat-focus = { workspace = true }
serde_json = { workspace = true }
textwrap = { workspace = true }
indexmap = { workspace = true }
unicode-width = { workspace = true }

[lib]
doctest = false

[build-dependencies]
serde_json = { workspace = true }
