[package]
name = "oatty-tui"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Oatty CLI terminal user interface"
license = "MIT OR Apache-2.0"
authors = ["Oatty CLI Team <devnull@example.com>"]
repository = "https://example.com/oatty"

[dependencies]
anyhow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
dirs-next = { workspace = true }
tracing = { workspace = true }
notify = "8.2.0"
oatty-registry = { path = "../registry" }
oatty-registry-gen = {path = "../registry-gen"}
oatty-util = { path = "../util" }
oatty-types = { path = "../types" }
oatty-mcp = { path = "../mcp" }
oatty-engine = { path = "../engine" }
arboard = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
heck = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
rat-focus = { workspace = true }
serde_json = { workspace = true }
textwrap = { workspace = true }
indexmap = { workspace = true }
unicode-width = { workspace = true }
url = { workspace = true }
thiserror.workspace = true

[lib]
doctest = false

[build-dependencies]
serde_json = { workspace = true }
