[package]
name = "oatty-tui"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
dirs-next = { workspace = true }
tracing = { workspace = true }
oatty-registry = { path = "../registry" }
oatty-util = { path = "../util" }
oatty-types = { path = "../types" }
oatty-mcp = { path = "../mcp" }
oatty-engine = { path = "../engine" }
arboard = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
heck = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
rat-focus = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
textwrap = { workspace = true }
indexmap = { workspace = true }
unicode-width = { workspace = true }
url = { workspace = true }
thiserror.workspace = true

[lib]
doctest = false
