[package]
name = "heroku-types"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Heroku CLI shared type definitions"
license = "MIT OR Apache-2.0"
authors = ["Heroku CLI Team <devnull@example.com>"]
repository = "https://example.com/heroku"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }


[dev-dependencies]
serde_json = { workspace = true }
