[package]
name = "oatty-types"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Oatty CLI shared type definitions"
license = "MIT OR Apache-2.0"
authors = ["Oatty CLI Team <devnull@example.com>"]
repository = "https://example.com/oatty"

[lib]
path = "src/lib.rs"

[dependencies]
postcard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
serde_yaml = { workspace = true }
