[package]
name = "oatty-types"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
postcard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
serde_yaml = { workspace = true }
