[package]
name = "oatty-util"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
regex = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
oatty-types = { path = "../types" }
reqwest = { workspace = true }
oatty-api = { path = "../api" }
serde_json = { workspace = true }
percent-encoding = { workspace = true }
serde = { workspace = true }
dirs-next = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow.workspace = true
url = { workspace = true }
unicode-width = { workspace = true }
keyring = { workspace = true }
indexmap.workspace = true
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3.24.0"
temp-env = "0.3.6"
